--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">娱光</string>
+    <string name="app_name">电影资源分享</string>
     <string name="exit_app">再按一次退出软件!</string>
 </resources>
